--- a/client/my-react-project/src/components/features/games/create-game/Create.module.css
+++ b/client/my-react-project/src/components/features/games/create-game/Create.module.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     width: 500px;
-    height: 690px;
+    min-height: 690px;
     background-color: rgba(51, 0, 111, 0.8);
     border-radius: 50px;
     border: none;
@@ -24,6 +24,12 @@
 }
 
 .createContainer input{
+    border-radius: 10px;
+    padding: 5px 10px 5px 10px;
+    border: none;
+}
+
+.createContainer textarea{
     border-radius: 10px;
     padding: 5px 10px 5px 10px;
     border: none;
