--- a/client/my-react-project/src/components/features/games/details/Details.module.css
+++ b/client/my-react-project/src/components/features/games/details/Details.module.css
@@ -128,3 +128,10 @@
     flex-direction: column;
     align-items: center;
 }
+
+.commentList{
+    display:flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
