--- a/client/my-react-project/src/components/features/games/details/Details.module.css
+++ b/client/my-react-project/src/components/features/games/details/Details.module.css
@@ -22,6 +22,7 @@
     display: flex;
     justify-content: center;
     margin-top: 5em;
+    margin-bottom: 1em;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
@@ -134,4 +135,13 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+}
+
+.alreadyBought{
+    font-size: 35px;
+    color: white;
+    text-align: center;
+    background-color: blueviolet;
+    padding: 10px 15px 10px 15px;
+    border-radius: 10px;
 }
