--- a/client/my-react-project/src/components/features/auth/profile/Profile.module.css
+++ b/client/my-react-project/src/components/features/auth/profile/Profile.module.css
@@ -68,3 +68,11 @@
     text-align: center;
     margin-top: 60px;
 }
+
+.productContainer {
+    max-width: 1200px;
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
