--- a/client/my-react-project/src/components/features/auth/register/Register.module.css
+++ b/client/my-react-project/src/components/features/auth/register/Register.module.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     width: 500px;
-    height: 630px;
+    height: auto;
     background-color: rgba(51, 0, 111, 0.8);
     border-radius: 50px;
     border: none;
@@ -71,3 +71,6 @@
     background-color: #75269d;
 }
  
+.errorMessage{
+    color: red;
+}
